Final UNC Version

--- a/client/partials/home.html
+++ b/client/partials/home.html
@@ -12,7 +12,7 @@
 <!--                    <md-divider style="border-width: 3px; border-color: #081c51;"></md-divider>-->
                     <md-card-content>
                         <div layout="row" layout-align="center center" style="margin-bottom: 10px; margin-top: 10px;">
-                            <span style="color: #2b2b2b; font-size: 16px; font-weight: bold;">Week 3 | Ultimate Ninjas</span>
+                            <span style="color: #2b2b2b; font-size: 16px; font-weight: bold;">Week 3 | Apex NorCal</span>
                         </div>
                         <md-divider></md-divider>
                         <div layout="row" style="padding-top: 15px; padding-bottom: 15px; border-bottom: 1px solid #eeeeee;" ng-repeat="item in posArr track by $index">
@@ -49,20 +49,70 @@
                     </md-card-content>
                 </md-card>
             </div>
+            <div layout="row" layout-align="center center" style="margin-top: 15px;">
+               <div layout="column" layout-align="center center" id="nn_ad">
+                    <div>
+                    <img src="/images/nn_logo_color.png" width="250px" height="auto"/>    
+                    </div>
+                    <div style="color: #ffffff; font-weight: bold; margin-top: 20px; padding-left: 10px; padding-right: 10px; font-size: 24px;">
+                        Watch more Ninja!
+                    </div>
+                    <div style="color: #ffffff; font-weight: bold; margin-top: 20px; padding-left: 10px; padding-right: 10px;" align="middle">
+                        Catch full UNC replays, ninja training sessions, tips and tricks and much more!
+                    </div>
+                    <div>
+                        <md-button style="background-color: #2c80c9; color: #ffffff; font-weight:bold; margin-top: 20px;" >Ninja<i>Now</i></md-button>
+                    </div>
+                </div> 
+            </div>
         </div>
         <div layout="column" flex="75">
-            <div>    
-                <md-card>
-                    <md-card-content>
-                        <div layout="row" flex style="height: 400px; overflow: hidden;">
-                            <img style="width: 100%; overflow: hidden; padding: 0px;" src="/images/swan_dig.jpg"/>
+            <div layout="row">  
+                <div layout="column" flex="65">
+                    <md-card>
+                        <md-card-content>
+                            <div layout="row" flex style="width: 100%; height: 350px; overflow: hidden;">
+                                <img style="width: 100%; overflow: hidden; padding: 0px;" src="/images/swan_dig.jpg"/>
+                            </div>
+                            <div>
+                                <div style="margin-top: 20px; font-size: 26px; font-weight: bold;">Swanson - DiGangi rivalry heating up in week 3</div>
+                                <div style="margin-top: 15px; color: #878787;">Ethan Swanson and Chris DiGangi have battled for the top spot in the first two weeks of the season, but in week 3 a new challenger approaches.</div>
+                            </div>
+                        </md-card-content>
+                    </md-card>
+                </div>
+                <div layout="column" flex="35">
+                    <md-card>
+                        <md-card-title style="background-color: #2c80c9; font-weight: bold; color:#ffffff; font-size: 14px; padding-top: 10px; padding-bottom: 10px;">
+                        <div layout="row">
+                            <span>Latest News</span>
                         </div>
-                        <div>
-                            <div style="margin-top: 20px; font-size: 26px; font-weight: bold;">Swanson - DiGangi rivalry heating up in week 3</div>
-                            <div style="margin-top: 15px; color: #878787;">Ethan Swanson and Chris DiGangi have battled for the top spot in the first two weeks of the season, but in week 3 a new challenger approaches.</div>
-                        </div>
-                    </md-card-content>
-                </md-card>
+                    </md-card-title>
+                        <md-card-content>
+                            <div style="font-weight: bold; margin-top: 20px;">
+                                Labreck gets first career UNC win
+                            </div>
+                            <div style="font-weight: bold; margin-top: 20px;">
+                                Week 4 Preview | McCartney due to bounce back
+                            </div>
+                            <div style="font-weight: bold; margin-top: 20px;">
+                                Michael Torres has a new furry training partner
+                            </div>
+                            <div style="font-weight: bold; margin-top: 20px;">
+                                Ranking the obstacles by difficulty so far this season, vote now!
+                            </div>
+                            <div style="font-weight: bold; margin-top: 20px;">
+                                Behind the scenes, how Ethan Swanson prepares for his course runs
+                            </div>
+                            <div style="font-weight: bold; margin-top: 20px;">
+                                Injury Update: The stallion set to compete in week 4 despite tweaked shoulder
+                            </div>
+                            <div style="font-weight: bold; margin-top: 20px;">
+                                Small competitor, big heart. The muscle ball visits childrens hospital
+                            </div>
+                        </md-card-content>
+                    </md-card>
+                </div>
             </div>
             <div style="margin-top: 25px;">
                 <div style="margin-left: 15px; font-size: 20px; border-bottom: 1px solid #b6b6b6;">Week 3 Recap</div>
@@ -109,16 +159,117 @@
                 </div>
             </div>
             <div style="margin-top: 25px;">
-                <div style="margin-left: 15px; font-size: 20px; border-bottom: 1px solid #b6b6b6;">Will be adding more sections like the above here and below</div>
+                <div style="margin-left: 15px; font-size: 20px; border-bottom: 1px solid #b6b6b6;">Analysis</div>
                 <div layout="row">
                     <div layout="column" flex="33">
+                        <md-card>
+                            <md-card-content>
+                                <div class="imgContainer">
+                                    <img class="image" src="/images/power_rankings.jpg" width="100%" height="auto">
+                                </div>
+                                <div style="margin-top: 10px; font-size: 16px; font-weight: bold;">Week 4 <br/>Power Rankings</div>
+                            </md-card-content>
+                        </md-card>
                     </div>
                     <div layout="column" flex="33">
+                        <md-card>
+                            <md-card-content>
+                                <div class="imgContainer">
+                                    <img class="image" src="/images/grant_hero.jpg" width="100%" height="auto">
+                                </div>
+                                <div style="margin-top: 10px; font-size: 16px; font-weight: bold;">Why Grant McCartney will finish the season strong</div>
+                            </md-card-content>
+                        </md-card>
                     </div>
                     <div layout="column" flex="33">
+                        <md-card>
+                            <md-card-content>
+                                <div class="imgContainer">
+                                    <img class="image" src="/images/digangi_nail_clip.jpg" width="100%" height="auto">
+                                </div>
+                                <div style="margin-top: 10px; font-size: 16px; font-weight: bold;">Speed vs. Strength | how the ninjas align</div>
+                            </md-card-content>
+                        </md-card>
+                    </div>
+                </div>
+            </div>
+            <div style="margin-top: 25px;">
+                <div style="margin-left: 15px; font-size: 20px; border-bottom: 1px solid #b6b6b6;">Training</div>
+                <div layout="row">
+                    <div layout="column" flex="33">
+                        <md-card>
+                            <md-card-content>
+                                <div class="imgContainer">
+                                    <img class="image" src="/images/swanson_lache.jpg" width="100%" height="auto">
+                                    <div class="text"><span class="glyphicon glyphicon-play-circle"></span></div>
+                                </div>
+                                <div style="margin-top: 10px; font-size: 16px; font-weight: bold;">Ethan Swanson hits massive lache in training session</div>
+                            </md-card-content>
+                        </md-card>
+                    </div>
+                    <div layout="column" flex="33">
+                        <md-card>
+                            <md-card-content>
+                                <div class="imgContainer">
+                                    <img class="image" src="/images/healthy_food.jpg" width="100%" height="auto">
+                                </div>
+                                <div style="margin-top: 10px; font-size: 16px; font-weight: bold;">Nutrition tips to help you fuel like a ninja</div>
+                            </md-card-content>
+                        </md-card>
+                    </div>
+                    <div layout="column" flex="33">
+                        <md-card>
+                            <md-card-content>
+                                <div class="imgContainer">
+                                    <img class="image" src="/images/silenzi_spider.jpg" width="100%" height="auto">
+                                </div>
+                                <div style="margin-top: 10px; font-size: 16px; font-weight: bold;">Mike Silenzi's tips for rehabbing shoulder injuries</div>
+                            </md-card-content>
+                        </md-card>
+                    </div>
+                </div>
+            </div>
+            <div style="margin-top: 25px;">
+                <div style="margin-left: 15px; font-size: 20px; border-bottom: 1px solid #b6b6b6;">From the Ninjas</div>
+                <div layout="row">
+                    <div layout="column" flex="33">
+                        <md-card>
+                            <md-card-content>
+                                <div class="imgContainer">
+                                    <img class="image" src="/images/labreck_em.jpg" width="100%" height="auto">
+                                </div>
+                                <div style="margin-top: 10px; font-size: 16px; font-weight: bold;">Labreck donates $1,000 for Cerebral Palsy</div>
+                            </md-card-content>
+                        </md-card>
+                    </div>
+                    <div layout="column" flex="33">
+                        <md-card>
+                            <md-card-content>
+                                <div class="imgContainer">
+                                    <img class="image" src="/images/grant_church.jpg" width="100%" height="auto">
+                                </div>
+                                <div style="margin-top: 10px; font-size: 16px; font-weight: bold;">McCartney on how religion drives him</div>
+                            </md-card-content>
+                        </md-card>
+                    </div>
+                    <div layout="column" flex="33">
+                        <md-card>
+                            <md-card-content>
+                                <div class="imgContainer">
+                                    <img class="image" src="/images/torres_hero.jpg" width="100%" height="200">
+                                </div>
+                                <div style="margin-top: 10px; font-size: 16px; font-weight: bold;">Torres unwinds by building unique furniture</div>
+                            </md-card-content>
+                        </md-card>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
+    <div style="margin-top: 25px;">
+    <div style="margin-left: 15px; font-size: 20px; border-bottom: 1px solid #b6b6b6;">Athlete Spotlight</div>
+        <div layout="row" flex="100" style="margin-top: 25px;">
+            <div id="athleteSpotlight"></div>
+    </div>
     </div>
 </div>
