--- a/server/views/index.html
+++ b/server/views/index.html
@@ -53,6 +53,48 @@
       </div>
     </md-toolbar>
 </md-content>
+    <div layout="row" flex="100" style="background: linear-gradient(to bottom, rgb(226,226,226) 0%,rgb(219,219,219) 50%,rgb(209,209,209) 51%,rgb(254,254,254) 100%); padding-top: 10px; padding-bottom: 10px; border-bottom: 2px solid #081c51;">
+                        <div layout="column" flex="15" style="border-right: 1px solid #878787;" layout-align="center center">
+                            <div style="color: #878787;">Course 1</div>
+                            <div style="font-weight: bold; color: #878787;">Movement Lab NJ</div>
+                            <div style="color: #2b2b2b; font-weight: bold;"><span><i class="fa fa-trophy" aria-hidden="true"></i></span><span style="margin-left: 5px;">DiGangi</span></div>
+                            </div>
+        <div layout="column" flex="15" style="border-right: 1px solid #878787;" layout-align="center center">
+                            <div style="color: #878787;">Course 2</div>
+                            <div style="font-weight: bold; color: #878787;">NinjaQuest</div>
+                            <div style="color: #2b2b2b; font-weight: bold;"><span><i class="fa fa-trophy" aria-hidden="true"></i></span><span style="margin-left: 5px;">Swanson</span></div>
+                            </div>
+        <div layout="column" flex="15" style="border-right: 1px solid #878787;" layout-align="center center">
+                            <div style="color: #878787;">Course 3</div>
+                            <div style="font-weight: bold; color: #878787;">Apex NorCal</div>
+                            <div style="color: #2b2b2b; font-weight: bold;"><span><i class="fa fa-trophy" aria-hidden="true"></i></span><span style="margin-left: 5px;">Labreck</span></div>
+                            </div>
+        <div layout="column" flex="15" style="border-right: 1px solid #878787;" layout-align="center center">
+                            <div style="color: #878787;">Course 4</div>
+                            <div style="font-weight: bold">Ultimate Ninjas Nap</div>
+                            <div style="color: #878787;">9/7/2019</div>
+                            </div>
+        <div layout="column" flex="15" style="border-right: 1px solid #878787;" layout-align="center center">
+                            <div style="color: #878787;">Course 5</div>
+                            <div style="font-weight: bold">Real Life Ninja Ac.</div>
+                            <div style="color: #878787;">10/12/2019</div>
+                            </div>
+        <div layout="column" flex="15" style="border-right: 1px solid #878787;" layout-align="center center">
+                            <div style="color: #878787;">Course 6</div>
+                            <div style="font-weight: bold">Alternate Routes</div>
+                            <div style="color: #878787;">11/9/2019</div>
+                            </div>
+        <div layout="column" flex="15" style="border-right: 1px solid #878787;" layout-align="center center">
+                            <div style="color: #878787;">Course 7</div>
+                            <div style="font-weight: bold">Iron Sports</div>
+                            <div style="color: #878787;">12/14/2019</div>
+                            </div>
+        <div layout="column" flex="15" style="border-right: 1px solid #878787;" layout-align="center center">
+                            <div style="color: #878787;">Course 8</div>
+                            <div style="font-weight: bold">Centercourt</div>
+                            <div style="color: #878787;">1/11/2020</div>
+                            </div>
+                    </div>
             
 
 
