--- a/client/css/home.css
+++ b/client/css/home.css
@@ -1,5 +1,7 @@
 .imgContainer {
   position: relative;
+    height: 200px;
+    overflow: hidden;
 /*  width: 50%;*/
 }
 
@@ -36,4 +38,18 @@
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   text-align: center;
+}
+
+#athleteSpotlight{
+    background: url('/images/grant_cover.jpg');
+    background-size: 100% 100%;
+    width: 100%;
+    height: 500px;
+}
+
+#nn_ad{
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('/images/nn_ad.jpg');
+    background-size: 100% 100%;
+    width: 95%;
+    height: 500px;
 }
