--- a/server/views/index.html
+++ b/server/views/index.html
@@ -26,6 +26,9 @@
     <script type="text/javascript" src="/js/app.js"></script>
   <script type="text/javascript" src="/js/factory.js"></script>
   <script type="text/javascript" src="/js/controller.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="https://d3js.org/d3-hexbin.v0.2.min.js"></script>
+<script src="https://d3js.org/topojson.v2.min.js"></script>
 </head>
  
 <body>
