--- a/client/partials/gyms.html
+++ b/client/partials/gyms.html
@@ -4,10 +4,25 @@
         margin-right: 0px;
     }
     	.states{
-        fill: #979797;
+        fill: #bdbdbd;
 		stroke: #a9a9a9;
 		stroke-width: 1;
 	}
+    
+    /* Style for Custom Tooltip */
+div.tooltip {   
+ 	position: absolute;           
+	text-align: center;           
+/*	width: 60px;                  */
+/*	height: 28px;                 */
+	padding: 2px;             
+	font: 14px sans-serif;        
+	background-color: rgba(0,0,0,0.7);
+    color: #ffffff;
+	border: 0px;      
+	border-radius: 3px;           
+	pointer-events: none;         
+}
 	/* On mouse hover, lighten state color */
 .states :hover {
   fill: #eeeeee;
@@ -26,7 +41,7 @@
     <md-card>
         <md-card-content>
             <div id="tooltip"></div><!-- div to hold tooltip. -->
-            <svg preserveAspectRatio="xMidYMid meet" id="statesvg"  width="700" height="500px"></svg> <!-- svg to hold the map. -->
+            <svg id="statesvg"  width="100%" height="500px"></svg> <!-- svg to hold the map. -->
         </md-card-content>
     </md-card>
 </div>
