--- a/client/partials/gyms.html
+++ b/client/partials/gyms.html
@@ -9,6 +9,11 @@
 		stroke-width: 1;
 	}
     
+    .background {
+  fill: none;
+  pointer-events: all;
+}
+    
     /* Style for Custom Tooltip */
 div.tooltip {   
  	position: absolute;           
@@ -24,6 +29,25 @@ div.tooltip {
 	pointer-events: none;         
 }
 	/* On mouse hover, lighten state color */
+
+    #states {
+  fill: #aaa;
+}
+
+#states .active {
+  fill: orange;
+}
+
+#state-borders {
+  fill: none;
+  stroke: #fff;
+  stroke-width: 1.5px;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  pointer-events: none;
+}
+    
+    /*
 .states :hover {
   fill: #eeeeee;
 }
@@ -36,6 +60,7 @@ div.tooltip {
   stroke-linecap: round;
   pointer-events: none;
 }
+*/
 </style>
 <div>
     <md-card>
