--- a/client/partials/gyms.html
+++ b/client/partials/gyms.html
@@ -66,7 +66,8 @@ div.tooltip {
     <md-card>
         <md-card-content>
             <div id="tooltip"></div><!-- div to hold tooltip. -->
-            <svg id="statesvg"  width="100%" height="500px"></svg> <!-- svg to hold the map. -->
+<!--            <svg id="statesvg"  width="100%" height="500px"></svg>  svg to hold the map. -->
+            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1hRGL5PplFdOgU51R1_mgvoBbr5EqIgcb" width="100%" height="400px;"></iframe>
         </md-card-content>
     </md-card>
 </div>
